2001-09-25  Mark McLoughlin <mark@skynet.ie>

	* Version 0.7.1.

2001-09-24  Mark McLoughlin <mark@skynet.ie>

	* configure.in: cleanup libtool versioning. Add
	ACLOCAL_FLAGS caching. Use pkg-config to check for
	libs.

	* libIDL-2.0.pc.in, libIDL.spec.in, Makefile.am, 
	  Makefile.msc.in, util.c: update.

	* IDL.h.new.in (LIBIDL_VERSION): rename to 
	LIBIDL_GEN_VERSION.

2001-09-21  Mark McLoughlin <mark@skynet.ie>

	* lexer.l (cpp_other): implement catch-all rule to get
	any cpp directives not caught by new cpp_status.

2001-09-21  Mark McLoughlin <mark@skynet.ie>

	* lexer.l (cpp_status): reimplement to take into account
	differences with variouts compilers.

	* lexer.l, parser.y: use g_ascii_ispace instead of isspace.

	* configure.in: require glib-1.3.7 for g_ascii_ispace.

2001-09-20  Mark McLoughlin <mark@skynet.ie>

	* .cvsignore: s/libIDL-config/libIDL-config-2/ and
	s/libIDL.info/libIDL2.info/.

2001-09-11  Havoc Pennington  <hp@redhat.com>

	* Makefile.am (libIDLincludedir): move headers to a versioned
	subdir, and nuke libIDLConf.sh. rename libIDL-config to
	libIDL-config-2

	* libIDL-2.0.pc.in (Cflags): change -Iincludedir to
	-Iincludedir/libIDL-2.0

2001-09-19  Mark McLoughlin <mark@skynet.ie>

	Fixes Bugs #60728 and 58458

	* lexer.l: merged patches from Raja R Harinath and 
	Takayuki Tamura.

2001-09-03  Mark McLoughlin <mark@skynet.ie>

	Fixes Bug #59824: the time to parse a union seemed to grow 
			  exponentially with the number of cases.

	* util.c, util.h (IDL_tree_is_recursive): re-implement 
	correctly. Recursion can only happen using sequences 
	in structs/unions. Replace unused hasRecur arg with
	compatibility dummy.

2001-08-02  Havoc Pennington  <hp@pobox.com>

	* Makefile.am: remove libIDL.m4 from build. It collided with
	libIDL 1, and we are in a pkg-config age. If we want to keep
	libIDL.m4 vs PKG_CHECK_MODULES(libIDL-2.0), the m4 macro 
	needs renaming.

2001-08-23  Mark McLoughlin <mark@skynet.ie>
