@@ -30,6 +30,9 @@ AM_INIT_AUTOMAKE(libIDL, $LIBIDL_VERSION, no-define)
 
 AC_DEFINE_UNQUOTED(LIBIDL_VERSION, "$LIBIDL_VERSION")
 
+dnl --disable-comile-warnings
+AC_ARG_ENABLE(compile-warnings, [  --enable-compile-warnings=[no/yes] Turn on compiler warnings.], [enable_compile_warnings="$enableval"],[enable_compile_warnings="yes"])
+
 dnl Cache $ACLOCAL_FLAGS
 AC_CACHE_CHECK([for aclocal flags], ac_cv_linc_aclocal_flags,[
    ac_cv_linc_aclocal_flags="$ACLOCAL_FLAGS"
@@ -77,6 +80,16 @@ if test -z "$HAVE_WCSTR_H"; then
 fi
 AC_SUBST(HAVE_WCHAR_H)
 AC_SUBST(HAVE_WCSTR_H)
+
+if test "x$GCC" = "xyes" -a "x$enable_compile_warnings" != "xno"; then
+        WARN_CFLAGS="-Wall -Wunused -Wmissing-prototypes -Wmissing-declarations"
+else
+        WARN_CFLAGS=
+fi
+
+AC_MSG_CHECKING(what warning flags to pass to the C compiler)
+AC_MSG_RESULT($WARN_CFLAGS)
+AC_SUBST(WARN_CFLAGS)
 
 AC_OUTPUT([
 Makefile
