@@ -1,3 +1,9 @@
+2001-09-26  Mark McLoughlin <mark@skynet.ie>
+
+	* configure.in: add --enable-compile-warnings option.
+
+	* Makefile.am: use WARN_CFLAGS.
+
 2001-09-25  Mark McLoughlin <mark@skynet.ie>
 
 	* Version 0.7.1.
